Refactored. Abstracted perspective stuff into a camera struct. WE FINALLY HAVE KB AND MOUSE MOVEMENT LETS GOOO.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(sources
     "os/os.c"
     "os/os_window.c"
     "render/render.c"
+    "render/camera/rendeR_camera.c"
 )
 set(source_files_list "")
 foreach(source ${sources})
