Basic bitset implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,13 @@ set(sources
     "base/base_memory.c" 
     "base/base_string.c" 
     "base/base_math.c" 
+    "base/base_bitset.c"
     "os/os.c"
     "os/os_window.c"
     "render/render.c"
-    "render/camera/rendeR_camera.c"
+    "render/camera/render_camera.c"
+    "draw/draw.c"
+    "input/input.c"
 )
 set(source_files_list "")
 foreach(source ${sources})
